# celer

./: pyproject.toml
examples/: plot_group_lasso.py  plot_lasso_cv.py
